# alex-mcp

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MCP_TOOLS_REFERENCE.md  OPEN_ALEX_MCP_GUIDE.md  OPEN_ALEX_MCP_GUIDE_Long.md  OPEN_ALEX_MCP_TOOLS.md  PROPOSED_ADDITIONAL_TOOLS.md  README.html  README.md  README_OPENALEX.md  alex-mcp-wrapper.bat  alex-mcp-wrapper.sh  cli_test.py  main.py  openalex_author_disambiguation.py  pyproject.toml  requirements.txt  run_alex_mcp.sh  run_server.py  server.py  setup.py  test_author_disambiguation.ipynb  test_expanded_server.py  test_include_abstract.py  test_server.py
.cursor/commands/: citation_validation_prompt.md
.cursor/rules/: OPEN_ALEX_MCP_TOOLS.md  open-alex-mcp.mdc
alex_mcp/: __init__.py  server.py
docs/: OPEN_ALEX_MCP_GUIDE.md  OPEN_ALEX_MCP_GUIDE_Long.md  citation_validation_guide.md
examples/: README.md  simple_fiona_example.py  test_author_disambiguation.py  test_comprehensive_disambiguation.py  test_enhanced_jorge_disambiguation.py  test_fiona_watt_disambiguation.py  test_institution_resolution.py  test_openalex_server.py  test_phase1_expansion.py  test_professional_disambiguation_system.py
src/alex_mcp/: __init__.py  data_objects.py  server.py
