[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alex-mcp"
version = "3.1.0"
description = "MCP server for OpenAlex academic research API"
authors = [{name = "Jorge Abreu Vicente", email = "jorge.abreu@embo.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/drAbreu/alex-mcp"
Repository = "https://github.com/drAbreu/alex-mcp"
Issues = "https://github.com/drAbreu/alex-mcp/issues"

[project.scripts]
alex-mcp = "alex_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alex_mcp*"]
